=== 0.2 (in development) ===

=== 0.1 ===

* Initial release
* Use it at your own risk :)